# striem

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
extra/: Dockerfile.setup  vector.yaml
lib/api/: Cargo.toml
lib/api/src/: actions.rs  alerts.rs  destination.rs  detections.rs  features.rs  lib.rs  main.rs  persist.rs  query.rs  routes.rs  server.rs  vector.rs
lib/api/src/sinks/: mod.rs
lib/api/src/sources/: aws_cloudtrail.rs  mod.rs  okta.rs
lib/common/: Cargo.toml
lib/common/src/: event.rs  lib.rs  prelude.rs
lib/config/: Cargo.toml
lib/config/src/: api.rs  input.rs  lib.rs  output.rs  storage.rs
lib/config/src/tests/: mod.rs
lib/storage/: Cargo.toml  README.md  build.rs
lib/storage/src/: backend.rs  convert.rs  lib.rs  util.rs  writer.rs
lib/storage/src/tests/: mod.rs
lib/vector/: Cargo.toml  build.rs
lib/vector/src/: client.rs  convert.rs  lib.rs  main.rs  server.rs
striem/: Cargo.toml
striem/src/: app.rs  detection.rs  main.rs
ui/: next.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json
ui/app/: components.css  globals.css  layout.tsx  page.tsx
ui/app/api/query/: route.ts
ui/app/components/: Sidebar.tsx
ui/app/components/Alerts/: Actions.tsx  AlertDetails.tsx  AlertFilters.tsx  index.tsx
ui/app/components/Explore/: index.tsx
ui/app/components/Rules/: RulesFilters.tsx  index.tsx
ui/app/components/Sources/: AddSource.tsx  index.tsx
ui/app/components/Storage/: index.tsx
ui/include/: features.tsx
ui/include/types/: rules.d.ts
