[package]
name = "striem"
version = "0.1.0"
edition = "2024"

[dependencies]
striem_api = {"path" = "../lib/api"}
striem_common = {"path" = "../lib/common"}
striem_config = {"path" = "../lib/config"}
striem_storage = {"path" = "../lib/storage"}
striem_vector = {"path" = "../lib/vector"}

anyhow.workspace = true
arc-swap.workspace = true
async-trait.workspace = true
backoff.workspace = true
env_logger.workspace = true
futures.workspace = true
futures-util.workspace = true
glob.workspace = true
log.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sigmars.workspace = true
tokio.workspace = true
tokio-stream.workspace = true

[features]
default = ["duckdb"]
duckdb = ["striem_api/duckdb"]
sqlite = ["striem_api/sqlite"]
