[package]
name = "striem_api"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "striem_api"
path = "src/main.rs"

[dependencies]
striem_common = {"path" = "../common"}
striem_config = {"path" = "../config"}

arrow-json = { "workspace" = true, "optional" = true }
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
duckdb =  { "workspace" = true, "optional" = true }
env_logger.workspace = true
erased-serde.workspace = true
log.workspace = true
r2d2 = { "workspace" = true, "optional" = true }
r2d2_sqlite = { "workspace" = true, "optional" = true }
rmcp.workspace = true
rusqlite = { "workspace" = true, "optional" = true }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sigmars.workspace = true
tempfile.workspace = true
tokio.workspace = true
toml.workspace = true
tower-http.workspace = true
uuid.workspace = true

[features]
default = ["duckdb"]
duckdb = ["dep:r2d2", "dep:duckdb", "dep:arrow-json"]
sqlite = ["dep:r2d2", "dep:rusqlite"]
