[package]
name = "striem_storage"
version = "0.1.0"
edition = "2024"

[dependencies]
striem_common = {"path" = "../common"}
striem_config = {"path" = "../config"}
anyhow.workspace = true
arc-swap.workspace = true
arrow.workspace = true
chrono.workspace = true
log.workspace = true
num_enum.workspace = true
parquet.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
uuid.workspace = true

[build-dependencies]
regex.workspace = true
serde_json.workspace = true
