[package]
name = "striem_vector"
version = "0.1.0"
edition = "2024"

[dependencies]
striem_common = { "path" = "../common" }

anyhow.workspace = true
prost.workspace = true
prost-types.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
log.workspace = true
tonic.workspace = true

[build-dependencies]
reqwest.workspace = true
tonic-build.workspace = true
